# laboratory-work-01-kapavkin

./: CMakeLists.txt  main.cpp
adam/: CMakeLists.txt  adam.cpp  adam.h
date/: CMakeLists.txt  date.cpp  date.h
matrix/: CMakeLists.txt  matrix.h
number/: CMakeLists.txt  number.cpp  number.h
report/: report.tex
